--- a/src/App.css
+++ b/src/App.css
@@ -353,5 +353,20 @@
   padding: 7px 14px;
 } 
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
+li {
+  padding-left: 1em; 
+  text-indent: -.7em;
+}
+
+li::before {
+  content: "• ";
+  font-size: 14pt;
+  color: #EB3390; /* or whatever color you prefer */
+}
 
